--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "portafolio",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://DazJ14.github.io/dazj-portfolio",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -17,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "animejs": "^3.2.1",
     "babel-plugin-macros": "^3.1.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
